# segment-colouring

./: Cargo.toml  README.md  history.txt  rust.strategy
cxx/: .gitignore  2_3.strategy  CMakeLists.txt  Makefile  README.md  common.cpp  common.hpp  draw.tex  ech.txt  game.cpp  game.hpp  rust.fixed.strategy  rust.strategy  state.cpp  state.hpp  strategy_check.cpp  strategy_draw.cpp  strategy_find.cpp
rust/: .gitignore  Cargo.toml  README.md  draw.tex  out.txt
rust/src/: lib.rs  main.rs
rust/src/linear_axis/: clicqued.rs  game.rs  history.rs  mod.rs  normalization.rs  queue.rs  strategy.rs
rust/src/simple/: mod.rs
rust/src/simple_state/: find.rs  mod.rs  print_strategy.rs
rust/src/simple_state/print_strategy/: mod.rs
rust/src/simple_state/print_strategy/graph/: mod.rs  printer.rs
rust/src/simple_state/state/: 2:  find_barrier.rs  generate_all.rs  hash.rs  mod.rs  string.rs  test.rs
src/: axis.rs  first_fit.rs  game.rs  hash.rs  lib.rs  main.rs  state_equivalence.rs  utils.rs
src/axis/: event.rs  mod.rs  print.rs  segment.rs
src/linear_axis/: clicqued.rs  event.rs  game.rs  history.rs  mod.rs  normalization.rs  print.rs  queue.rs  strategy.rs
src/tests/: axis_test.rs  confine_axis_test.rs  game_test.rs  mod.rs  state_equivalence_test.rs
