[package]
name = "segment-colouring"
version = "0.1.0"
edition = "2021"
default-run = "segment-colouring"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }

