[package]
name = "segment-colouring"
version = "0.1.0"
edition = "2021"
default-run = "segment-colouring"

[dependencies]
ahash = "0.8.12"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.31"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }

[features]
ahash = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false